--- a/app/src/main/res/layout/activity_edit_day_activities.xml
+++ b/app/src/main/res/layout/activity_edit_day_activities.xml
@@ -11,6 +11,8 @@
         android:id="@+id/textView3"
         android:layout_width="217dp"
         android:layout_height="36dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:text="הוספת פעילות"
         android:textAlignment="center"
         android:textAllCaps="false"
@@ -27,11 +29,14 @@
         android:layout_width="253dp"
         android:layout_height="38dp"
         android:layout_marginTop="108dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
         android:hint="שם הפעילות :"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.848"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,11 +48,13 @@
         android:layout_height="37dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="24dp"
+        android:background="#BAB2B2"
         android:ems="10"
         android:hint="משעה : xx:yy"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AddActivityName" />
 
@@ -57,11 +64,13 @@
         android:layout_height="37dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="20dp"
+        android:background="#BAB2B2"
         android:ems="10"
         android:hint="עד: xx:yy"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/AddTimeStart"
         app:layout_constraintHorizontal_bias="0.964"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,6 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:text="הוסף"
+        android:backgroundTint="@color/black"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.64"
         app:layout_constraintStart_toStartOf="parent"
