--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="cursive"
-            android:text="שם המלא"
+            android:text="מנהל"
             android:textSize="34sp"
             app:layout_constraintBottom_toTopOf="@+id/imageView6"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,12 +37,18 @@
             android:id="@+id/button_logout"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="411dp"
+            android:layout_marginTop="685dp"
+            android:layout_marginBottom="46dp"
             android:background="#3F51B5"
             android:backgroundTint="#3F51B5"
             android:onClick="client_click_logout"
             android:text="logout"
-            tools:layout_editor_absoluteX="411dp"
-            tools:layout_editor_absoluteY="685dp" />
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -95,7 +101,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/header_menu"
-        app:menu="@menu/menu_main" />
+        app:menu="@menu/menu_main_admin" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
