--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/kk"
     tools:context=".calendar.EditActivity">
 
     <EditText
@@ -12,7 +13,9 @@
         android:layout_height="39dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="4dp"
+        android:background="#BAB2B2"
         android:ems="10"
+        android:hint="משעה"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
@@ -24,7 +27,9 @@
         android:layout_width="91dp"
         android:layout_height="39dp"
         android:layout_marginTop="36dp"
+        android:background="#BAB2B2"
         android:ems="10"
+        android:hint="עד שעה"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
@@ -36,7 +41,10 @@
         android:layout_width="207dp"
         android:layout_height="41dp"
         android:layout_marginTop="72dp"
+        android:background="#BAB2B2"
+        android:backgroundTint="#BAB2B2"
         android:ems="10"
+        android:hint="הקלד את שם הפעילות"
         android:inputType="textPersonName"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
@@ -50,6 +58,8 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="56dp"
         android:text="בטל"
+        android:backgroundTint="@color/black"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/updateTimeEnd"
@@ -62,6 +72,8 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="52dp"
         android:text="עדכן"
+        android:backgroundTint="@color/black"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -73,6 +85,7 @@
         android:id="@+id/textView21"
         android:layout_width="156dp"
         android:layout_height="30dp"
+        android:background="#BAB2B2"
         android:text="עריכת פעילות"
         android:textAlignment="center"
         android:textAllCaps="false"
