--- a/app/src/main/res/layout/recycleritem_activity.xml
+++ b/app/src/main/res/layout/recycleritem_activity.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#BAB2B2"
+    android:backgroundTint="#BAB2B2"
     android:paddingLeft="16dp"
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
@@ -19,6 +21,7 @@
         android:layout_marginBottom="25dp"
         android:text="Name"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView_activity_time_start"
         app:layout_constraintStart_toStartOf="@+id/textView_activity_time_start"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +34,7 @@
         android:layout_marginBottom="20dp"
         android:text="Start time"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView_activity_time_end"
         app:layout_constraintStart_toStartOf="@+id/textView_activity_time_end"
         app:layout_constraintTop_toBottomOf="@+id/textView_activity_name" />
@@ -44,6 +48,7 @@
         android:layout_marginBottom="12dp"
         android:text="End Time"
         android:textSize="10sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView14" />
@@ -110,6 +115,8 @@
         android:onClick="ClickToRemov"
         android:text="ערוך"
         android:textSize="10sp"
+        android:backgroundTint="@color/black"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.671"
