--- a/app/src/main/res/layout/recycleritem_activity.xml
+++ b/app/src/main/res/layout/recycleritem_activity.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/screen_container_activity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#BAB2B2"
-    android:backgroundTint="#BAB2B2"
-    android:paddingLeft="16dp"
-    android:paddingTop="@dimen/cardview_compat_inset_shadow"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="100dp"
+    app:cardElevation="8dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="#C8C4C4"
+        android:paddingLeft="16dp"
+        android:paddingTop="@dimen/cardview_compat_inset_shadow"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp">
 
     <TextView
 
@@ -108,19 +116,7 @@
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="95dp"
-        android:layout_height="35dp"
-        android:onClick="ClickToRemov"
-        android:text="ערוך"
-        android:textSize="10sp"
-        android:backgroundTint="@color/black"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.671"
-        app:layout_constraintStart_toEndOf="@+id/textView_activity_time_start"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
