--- a/app/src/main/res/layout/activity_update_student.xml
+++ b/app/src/main/res/layout/activity_update_student.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/kk"
-    tools:context=".updateRemoveUser.UpdateRemoveStudent">
+    tools:context=".userUpdate.UpdateStudent">
 
 
     <EditText
@@ -117,13 +117,13 @@
         android:id="@+id/button_student_update"
         android:layout_width="156dp"
         android:layout_height="49dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="164dp"
+        android:backgroundTint="@color/black"
         android:hint="Student Update"
         android:onClick="click_student_Update_student"
         android:text="עדכון חניך"
-        android:backgroundTint="@color/black"
         android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/button_remove_student"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.372"
         app:layout_constraintStart_toStartOf="parent" />
@@ -252,35 +252,5 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/button_remove_student"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="111dp"
-        android:layout_marginEnd="184dp"
-        android:layout_marginBottom="56dp"
-        android:onClick="student_remove_student"
-        android:text="מחיקת חנית"
-        android:backgroundTint="@color/black"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="78dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="307dp"
-        android:layout_marginTop="184dp"
-        android:layout_marginEnd="26dp"
-        android:onClick="click_sms"
-        app:layout_constraintBottom_toTopOf="@+id/textView_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_message_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
