--- a/app/src/main/res/layout/activity_update_teacher.xml
+++ b/app/src/main/res/layout/activity_update_teacher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/kk"
-    tools:context=".updateRemoveUser.UpdateRemoveTeacher">
+    tools:context=".userUpdate.UpdateTeacher">
 
 
     <ImageView
@@ -144,13 +144,13 @@
         android:id="@+id/button_update_teacher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="156dp"
         android:backgroundTint="@color/black"
         android:hint="Teacher Update"
         android:onClick="click_teacher_update_teacher"
         android:text="עדכון מדריך"
         android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/button_remove_teacher"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.381"
         app:layout_constraintStart_toStartOf="parent" />
@@ -249,35 +249,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/button_remove_teacher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="114dp"
-        android:layout_marginEnd="172dp"
-        android:layout_marginBottom="68dp"
-        android:backgroundTint="@color/black"
-        android:onClick="click_remove_teacher"
-        android:text="מחיקת מדריך"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="78dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="307dp"
-        android:layout_marginTop="184dp"
-        android:layout_marginEnd="26dp"
-        android:onClick="click_sms"
-        app:layout_constraintBottom_toTopOf="@+id/textView_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_message_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
