--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_screen_admin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/kk"
+    android:background="@drawable/background_main"
     android:paddingLeft="16dp"
     android:paddingTop="@dimen/cardview_compat_inset_shadow"
     android:paddingRight="16dp"
@@ -74,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:srcCompat="@drawable/w" />
+            app:srcCompat="@drawable/menu_design" />
 
         <TextView
             android:id="@+id/textView12"
