--- a/app/src/main/res/layout/activity_client_menu.xml
+++ b/app/src/main/res/layout/activity_client_menu.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main_screen_client"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/kk"
+    android:background="@drawable/background_main"
     tools:context=".menu.ClientMenuActivity">
 
 
@@ -66,7 +66,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:srcCompat="@drawable/w" />
+            app:srcCompat="@drawable/menu_design" />
 
         <TextView
             android:id="@+id/textView12"
