--- a/app/src/main/res/layout/activity_sms_user.xml
+++ b/app/src/main/res/layout/activity_sms_user.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/kk"
+    android:background="@drawable/background_main"
     tools:context=".sms.sms_user_Activity">
 
 
