--- a/app/src/main/res/layout/activity_edit_day_activities.xml
+++ b/app/src/main/res/layout/activity_edit_day_activities.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
-    tools:context=".calendar.AddActivities">
+    android:background="@drawable/kk"
+    tools:context=".calendar.EditDayActivities">
 
     <TextView
         android:id="@+id/textView3"
