--- a/app/src/main/res/layout/activity_personal_information_teacher.xml
+++ b/app/src/main/res/layout/activity_personal_information_teacher.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".personalInformation.Personal_Information_teacher"
-    android:background="@drawable/background_main">
+    android:background="@drawable/kk">
 
     <TextView
         android:id="@+id/textView_id_teacher"
