--- a/app/src/main/res/layout/activity_student_card.xml
+++ b/app/src/main/res/layout/activity_student_card.xml
@@ -5,7 +5,7 @@
     android:id="@+id/student_card_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_main"
+    android:background="@drawable/kk"
     tools:context=".userCard.StudentCardActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
