--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/kk"
+    android:background="@drawable/general_design_image"
     tools:context=".feedback.FeedbackActivity">
 
     <Button
@@ -25,17 +25,17 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="146dp"
-        android:layout_height="76dp"
+        android:layout_width="101dp"
+        android:layout_height="45dp"
         android:layout_marginStart="122dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="147dp"
         android:background="#BAB2B2"
         android:backgroundTint="#BAB2B2"
         android:text="משוב"
-        android:textSize="60sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.609"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
