--- a/app/src/main/res/layout/recycleritem_student.xml
+++ b/app/src/main/res/layout/recycleritem_student.xml
@@ -48,14 +48,15 @@
 
         <TextView
             android:id="@+id/textView_student_last_name"
-            android:layout_width="61dp"
+            android:layout_width="53dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="44dp"
-            android:layout_marginBottom="13dp"
+            android:layout_marginBottom="12dp"
             android:text="Last Name"
             android:textSize="10sp"
             app:layout_constraintBottom_toTopOf="@+id/textView_student_id"
             app:layout_constraintEnd_toEndOf="@+id/textView_student_id"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/imageView_sdudent" />
 
         <TextView
@@ -73,7 +74,7 @@
 
         <TextView
             android:id="@+id/textView_student_phone"
-            android:layout_width="43dp"
+            android:layout_width="104dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="9dp"
@@ -85,8 +86,8 @@
 
         <TextView
             android:id="@+id/textView_student_email"
-            android:layout_width="48dp"
-            android:layout_height="wrap_content"
+            android:layout_width="88dp"
+            android:layout_height="0dp"
             android:layout_marginBottom="10dp"
             android:text="Email"
             android:textSize="10sp"
@@ -95,7 +96,7 @@
 
         <TextView
             android:id="@+id/textView_student_id"
-            android:layout_width="66dp"
+            android:layout_width="55dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="10dp"
@@ -106,9 +107,9 @@
 
         <TextView
             android:id="@+id/textView_student_class"
-            android:layout_width="36dp"
+            android:layout_width="31dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="44dp"
             android:layout_marginBottom="10dp"
             android:text="Class"
             android:textSize="10sp"
@@ -119,13 +120,14 @@
             android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="4dp"
             android:text="שם"
             android:textSize="10sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView11"
             app:layout_constraintStart_toStartOf="@+id/textView11"
-            app:layout_constraintTop_toTopOf="@+id/textView_student_name" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView11"
@@ -142,6 +144,7 @@
             android:id="@+id/textView14"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="תעודת זהות"
             android:textSize="10sp"
             android:textStyle="bold"
@@ -182,7 +185,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/textView_student_class"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.204"
+            app:layout_constraintHorizontal_bias="0.407"
             app:layout_constraintStart_toEndOf="@+id/textView_student_class" />
 
         <TextView
