--- a/app/src/main/res/layout/activity_edit_day_activities.xml
+++ b/app/src/main/res/layout/activity_edit_day_activities.xml
@@ -52,6 +52,7 @@
         android:ems="10"
         android:hint="משעה : xx:yy"
         android:inputType="textPersonName"
+        android:onClick="click_time_start"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -68,6 +69,7 @@
         android:ems="10"
         android:hint="עד: xx:yy"
         android:inputType="textPersonName"
+        android:onClick="click_time_end"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
         android:textStyle="bold"
