--- a/app/src/main/res/layout/activity_sms_user.xml
+++ b/app/src/main/res/layout/activity_sms_user.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/general_design_image"
-    tools:context=".sms.sms_user_Activity">
+    tools:context=".notification.sms_user_Activity">
 
 
     <!-- EditText for entering a message  -->
