--- a/app/src/main/res/layout/activity_student_card.xml
+++ b/app/src/main/res/layout/activity_student_card.xml
@@ -17,8 +17,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:background="#BAB2B2"
             android:backgroundTint="#BAB2B2"
@@ -27,8 +25,10 @@
             android:inputType="textPersonName"
             app:layout_constraintBottom_toTopOf="@+id/editText_student_last_name"
             app:layout_constraintEnd_toStartOf="@+id/textView_name"
+            app:layout_constraintHorizontal_bias="0.311"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView_stusent_imag"
+            app:layout_constraintVertical_bias="0.777"
             tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
@@ -152,7 +152,6 @@
             android:id="@+id/textView_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="255dp"
             android:layout_marginEnd="118dp"
             android:layout_marginBottom="14dp"
             android:background="#BAB2B2"
@@ -161,8 +160,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView_last"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/textView_last"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView_stusent_imag"
+            app:layout_constraintVertical_bias="0.985" />
 
         <TextView
             android:id="@+id/textView_last"
